--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+
+@layer components {
+	.card-container {
+		@apply lg:flex lg:justify-between grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 place-items-center lg:place-items-start;
+	}
+
+	.view-more-btn {
+		@apply text-center md:text-right mt-3;
+	}
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+	font-family: "Poppins", "sans-serif";
+	color: #ccc;
+}
+
+input:focus-visible {
+	outline: none;
 }
